--- a/progetto/pokemon-app/frontend/src/app/app.component.html
+++ b/progetto/pokemon-app/frontend/src/app/app.component.html
@@ -1,9 +1,17 @@
 <h1>{{ title }}</h1>
-<div class="container">
+<div class="container mt-4">
   <div class="row">
     <div class="col-md-4" *ngFor="let pokemon of pokemons">
-      <app-pokemon-card [pokemon]="pokemon"></app-pokemon-card>
+      <div class="card mb-4">
+        <img [src]="pokemon.image" class="card-img-top" [alt]="pokemon.name">
+        <div class="card-body">
+          <h5 class="card-title text-capitalize">{{ pokemon.name }}</h5>
+          <p class="card-text">
+            <span *ngFor="let t of pokemon.types" class="badge bg-primary me-1">{{ t }}</span>
+          </p>
+        </div>
+      </div>
     </div>
   </div>
-  <button class="btn btn-primary" (click)="loadMore()">Carica altri Pokémon</button>
+  <button class="btn btn-success" (click)="loadMore()">Carica altri 3</button>
 </div>
